# Temp

./: CMakeLists.txt  README.md  main.cpp
adapters/: CMakeLists.txt  book_controller.cpp  book_controller.hpp  book_dto.cpp  book_dto.hpp
presentation/: CMakeLists.txt  main.qml
